Include figures folder and adjust existing paths

--- a/CPSC365_SP24/section1.tex
+++ b/CPSC365_SP24/section1.tex
@@ -41,7 +41,7 @@
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 \DeclarePairedDelimiter\ceiling{\lceil}{\rceil}
 
-\title{Discussion Section 1: Recurrences and Divide-and-Conquer Algorithms}
+\title{Section 1: Recurrences and Divide-and-Conquer Algorithms}
 \date{January 26, 2024}
 \author{Amy Zhao}
 
@@ -97,7 +97,7 @@ Recall that for divide and conquer algorithms, the runtime of the algorithm $T(n
 \end{equation}
 where $a$ is the number of recursive calls, $b$ is the input size shrinkage factor, and $d$ is the exponent in the runtime of the ``combination step''.
 \begin{center}
-    \includegraphics[width=0.7\textwidth]{recursion_tree.png}
+    \includegraphics[width=0.7\textwidth]{figures/recursion_tree.png}
 \end{center}
 If $T(n)$ is defined by a standard recurrence, with parameters $a \geq 1$, $b > 1$, and $d \geq 0$, then 
 \begin{gather} \label{MasterThm}
