--- a/CPSC365_SP24/section3.tex
+++ b/CPSC365_SP24/section3.tex
@@ -193,7 +193,7 @@ Thus, the algorithm proceeds by first removing all \textcolor{DeepSkyBlue3}{\tex
 
 \begin{figure}[H]
     \centering
-    \includesvg[width=\textwidth, pretex=\scriptsize]{modifying_reachability.svg}
+    \includesvg[width=\textwidth, pretex=\scriptsize]{figures/modifying_reachability.svg}
     \caption{Example of a graph (left) where it's possible to reach $v$ from $u$ with a path of a single color (center) and a path where all one color appears before the other (right).}
 \end{figure}
 
@@ -207,7 +207,7 @@ Accounting for the runtime of each operation, we see that this algorithm also ha
 Recall that a \textbf{bipartite graph} is a graph whose vertices can be divided into two sets such that every edge in the graph connects one vertex in $U$ to a corresponding vertex in $V$; no two vertices in the same set share an edge. 
 \begin{figure}[H]
     \centering 
-    \includesvg[width=0.35\textwidth, pretex=\normalsize]{bipartite_graphs.svg}
+    \includesvg[width=0.35\textwidth, pretex=\normalsize]{figures/bipartite_graphs.svg}
     \caption{Examples of bipartite graphs; node colors denote the set that the vertex would belong to if split accordingly.}
 \end{figure} 
 
@@ -298,7 +298,7 @@ As an example, consider the maze given by:
             \cdot & \cdot & \cdot & + \\
             + & + & + & \cdot 
         \end{bmatrix}$ & 
-        \includegraphics[width=0.2\textwidth, valign=m]{maze.png}
+        \includegraphics[width=0.2\textwidth, valign=m]{figures/maze.png}
     \end{tabular}
 \end{center}
 
